adds ecomode that can be turned on or off, but is defaulted to on

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -13,9 +13,12 @@
 
   <!-- include source files here... -->
   <script src="src/thermostat.js"></script>
+  <script src="src/ecomode.js"></script>
+
 
   <!-- include spec files here... -->
   <script src="spec/thermostatSpec.js"></script>
+  <script src="spec/ecomodeSpec.js"></script>
 
 </head>
 
