--- a/src/index.html
+++ b/src/index.html
@@ -28,37 +28,52 @@
 
       $(thermostat = new Thermostat);
 
-      $('#temperature').text(thermostat.temperature);
-      $('#ecomodeIsOn').text(thermostat.ecomodeIsOn);
+
 
       $("#up").click(function() {
         thermostat.up();
-        $('#temperature').text(thermostat.temperature);
+        updateTemp();
+        updateColour();
       });
 
       $("#down").click(function() {
         thermostat.down();
-        $('#temperature').text(thermostat.temperature);
+        updateTemp();
+        updateColour();
       });
 
       $("#reset").click(function() {
         thermostat.reset();
-        $('#temperature').text(thermostat.temperature);
+        updateTemp();
+        updateColour();
       });
 
       $("#ecomode-on").click(function() {
         thermostat.ecomodeTurnOn();
-        $('#ecomodeIsOn').text('on')
-        $('#temperature').text(thermostat.temperature);
+        updateEcomode();
+        updateTemp();
       });
 
       $("#ecomode-off").click(function() {
         thermostat.ecomodeTurnOff();
-        $('#ecomodeIsOn').text('off')
-        $('#temperature').text(thermostat.temperature);
+        updateEcomode();
+        updateTemp();
       });
 
+      updateColour = function() {
+        document.getElementById("temperature").style.color = thermostat.textColour();
+      };
 
+      updateTemp = function() {
+        $('#temperature').text(thermostat.temperature);
+      };
+
+      updateEcomode = function() {
+        $('#ecomodeIsOn').text(thermostat.ecomodeIsOn);
+      };
+
+      updateTemp();
+      updateEcomode();
 
     })
 
